# luthier

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build-dist.py  main.py  prepare-release.py  pytest.ini  requirements-dev.txt
.github/workflows/: pytest.yml  release.yml
Resources/: luthier.icns
Templates/: CMakeLists.txt
Templates/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
_bmad-output/: architecture.md  project-context.md
_bmad-output/implementation-artifacts/: 1-1-projectspec-dataclass.md  1-2-core-generation-pipeline-accepts-projectspec.md  1-3-app-layer-uses-projectspec-via-spec.md  1-4-cmakelists-txt-template-consolidation.md  1-5-cmakeuserpresets-json-full-multi-platform-preset-set.md  1-6-juce-directory-in-preferences.md  1-7-gitignore-as-a-customizable-template.md  10-1-ci-multi-platform-pytest-matrix.md  10-2-cd-release-pipeline.md  2-1-project-reload-via-luthier-json-sidecar.md  2-2-cmake-regex-fallback-for-legacy-projects.md  3-1-test-infrastructure-unit-tests-validators-and-plugin-settings.md  3-2-unit-tests-rendering-render-context.md  3-3-unit-tests-projectspec-and-templates-store.md  3-4-integration-tests-project-generation-round-trip.md  4-1-pyinstaller-bundle-macos.md  4-2-pyinstaller-bundle-windows-and-linux.md  4-3-cross-platform-cmake-configuration-validation.md  4-4-contributor-documentation.md  5-1-preferences-model-profile-workflow.md  5-2-project-ui-choose-buttons-layout.md  5-3-jucedir-on-projectspec-generation-pipeline.md  5-4-decouple-open-generate-from-preferences-json.md  5-5-create-new-project-full-reset-dirty-guard.md  5-5-manual-smoke-test-report.md  6-1-dedicated-status-message-bar.md  7-1-github-actions-ci-for-pytest.md  7-2-atomic-json-persistence-corrupt-file-feedback.md  7-3-core-generation-reload-robustness.md  7-4-test-hygiene-minor-ui-hardening.md  8-1-workspace-per-os-paths.md  8-2-pre-release-legacy-cleanup.md  9-1-remove-open-project-scaffold-only-positioning.md  9-2-block-generate-non-empty-destination.md  9-3-decoupled-plugin-characteristics-and-projectspec.md  9-4-template-pipeline-audio-io-midi-description.md  9-5-documentation-v1-guide-manuals-readme.md  9-6-test-suite-scaffold-only-regression.md  9-7-ui-accent-preferences-only-os-tree-connectors.md  9-8-session-regenerate-with-warning.md  (+7 more)
_bmad-output/implementation-artifacts/investigations/: macos-x86_64-intel-build-investigation.md
_bmad-output/planning-artifacts/: correct-course-handoff-epic-5-workflows.md  correct-course-handoff-v1-scaffold-only.md  create-epics-handoff-epic-5.md  epics.md  sprint-change-proposal-2026-06-25.md  sprint-change-proposal-2026-06-28.md  sprint-change-proposal-2026-07-04-session-regenerate.md  sprint-change-proposal-2026-07-04-v1-scaffold-only.md  sprint-change-proposal-2026-07-09-cd-release.md  sprint-change-proposal-2026-07-09-ci-multiplatform.md
_bmad-output/planning-artifacts/architecture/architecture-Luthier-2026-06-22/: .memlog.md  ARCHITECTURE-EXPLAINED.md  ARCHITECTURE-SPINE.md  architecture-explained.md  (+1 more)
app/: confirm.py  main_window.py  qss.py  resources.py  sidebar.py  theme.py  version.py
app/pages/: about.py  artefacts.py  build_settings.py  compilation.py  formats.py  path_specs.py  plugin_characteristics.py  plugin_type.py  preferences.py  project.py  project_info.py  templates.py  workspace.py
app/widgets/: accent_color_picker.py  combo_field.py  elided_line_edit.py  folder_field.py  os_path_tree_group.py  save_bar.py  saved_badge.py  section.py  status_capsule.py  text_area_field.py  validated_field.py  validated_form.py  watermark.py
core/: accent_colors.py  app_state.py  display.py  generator_bridge.py  json_files.py  paths.py  plugin_settings.py  preferences.py  project_form_state.py  project_generator.py  project_reader.py  project_spec.py  project_writer.py  render_context.py  templates_store.py  validation.py
docs/: ARCHITECTURE.md  Luthier.md  MANUEL-UTILISATEUR.md  README.md  USER-MANUAL.md  architecture.md  checklist-qa-manuelle.md  checklist-qa-passe-unique.md  checklist-qa-pre-release-v1.md  guide-juce-cmake-et-luthier.md  manuel-utilisateur.md  user-manual.md
docs/dev/: architecture.md  release-guide.md
docs/qa/: smoke-test-three-os.md  smoke-test-windows-addon.md
docs/tests/: checklist-qa-manuelle.md  checklist-qa-passe-unique.md  checklist-qa-pre-release-v1.md
docs/tests/1.0.0/: smoke-test-v1-trois-os.md
docs/tests/1.0.0-beta/: checklist-qa-manuelle.md  checklist-qa-passe-unique.md  checklist-qa-pre-release-v1.md
docs/tests/1.0.0-pre-release/: smoke-test-rc3-windows.md  smoke-test-rc4-windows.md  smoke-test-v1-trois-os.md
docs/user/: guide-juce-cmake-et-luthier.md  juce-cmake-and-luthier-guide.md  manuel-utilisateur.md  user-manual.md
docs/user/guides/: guide-juce-cmake-et-luthier.md  juce-cmake-and-luthier-guide.md
publish/: build-dist.py  prepare-release.py
publish/templates/: README-linux.template.txt  README-macos.template.txt  README-windows.template.txt  RELEASE_NOTES.template.md
resources/icons/: luthier.icns
scripts/: blanken-qa-procedure.py
templates/: .cursorrules  CMakeLists.txt  CMakeUserPresets.json  README.md
templates/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
tests/: conftest.py  test_story_1_2.py  test_story_2_1.py  test_story_2_2.py
tests/integration/: test_cmake_cross_platform.py  test_frozen_bundle.py  test_round_trip.py  test_startup.py
tests/unit/: test_about.py  test_accent_colors.py  test_app_icons.py  test_app_state.py  test_buses_properties.py  test_confirm.py  test_core_imports.py  test_generate_guard.py  test_json_files.py  test_path_specs.py  test_paths.py  test_plugin_characteristics.py  test_plugin_settings.py  test_preferences.py  test_preferences_decouple.py  test_prepare_release.py  test_project_dirty_guard.py  test_project_reader.py  test_project_spec.py  test_project_writer.py  test_render_context.py  test_rendering.py  test_status_capsule.py  test_templates_store.py  test_validation.py  test_workspace_migration.py  test_workspace_paths.py
(+7 files in other folders)
